--- a/lab2/src/mem/Makefile
+++ b/lab2/src/mem/Makefile
@@ -7,9 +7,10 @@ TEST := testbenchBF testbenchFF testbenchWF
 
 mem: mem.c
 	$(CC) $(CFLAGS) -o $@ $^
+# auto test
 mem_test: mem.c
 	$(CC) $(CFLAGS) -o $@ $^ -DTEST
-test: mem_test
+test: mem_test generate
 	@for file in $(TEST); do echo "test $$file"; ./mem_test < $$file > $$file.result; done
 generate: generate.c
 	$(CC) $(CFLAGS) -o $@ $^
